Updates to remove compile warnings